--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
     <hr>
     <footer class="footer w-100">
-        <div class="footer-text">
-            <div class="footer-links float-end mt-2 mb-2"><a class="footer-link me-3" href="#">Privacy</a><a class="footer-link me-3" href="#">Terms</a><a class="footer-link me-3" href="#">Feedback</a><a class="footer-link me-3" href="#">Support</a></div>
+        <div class="footer-text mt-2 mb-2">
+            <div class="footer-links float-end"><a class="footer-link me-3" href="#">Privacy</a><a class="footer-link me-3" href="#">Terms</a><a class="footer-link me-3" href="#">Feedback</a><a class="footer-link me-3" href="#">Support</a></div>
             <div>&copy;2021 SOI Learning Portal. All Rights Reserved.</div>
         </div>
     </footer>
